<resources>
    <string name="app_name">TranBus demo</string>
    <string name="main_title1">Get Out And About</string>
    <string name="main_title2">Stepping out? We\'ll help to pick best track</string>
    <string name="where_to">  Where to?</string>
    <string name="seeAllTracks">See All Tracks</string>
    <string name="aroundYou">Around You</string>
    <string name="allTracks_title1">All Tracks Here</string>
    <string name="allTracks_title2">Pick a track to get full details about it.</string>
    <string name="track_card_title">Test Track</string>
    <string name="track_card_start">test start point</string>
    <string name="track_card_end">test end point</string>
    <string name="track_card_dis">12.5 km</string>
    <string name="track_card_time">Average Travel Time: 45 min</string>
    <string name="track_card_price">0.5 JD</string>
    <string name="search_title">Search For A Station, Start, or End Point</string>
    <string name="bus_track_name">Bus Name</string>
    <string name="bus_bus_id">Bus ID</string>
    <string name="bus_bus_year">Bus Year</string>
    <string name="bus_max_number">Max Number of Passengers</string>
    <string name="bus_button">See Track Details</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="trip_point">Trip Price</string>
    <string name="average_travel_time">Average Travel Time</string>
    <string name="track_distance">Track Distance</string>
    <string name="active_buses">Active Buses</string>
    <string name="main_city">Main City</string>
    <string name="see_buses_on_the_map">See Buses On The Map</string>
    <string name="splash_name">Graduation Project Demo Version</string>
</resources>