<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:outlineAmbientShadowColor="@color/black"
    android:outlineSpotShadowColor="@color/black"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/track_card_name_tv"
            android:text="@string/track_card_title"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            ></TextView>
        <TextView
            android:layout_below="@id/track_card_name_tv"
            android:layout_marginStart="-5dp"
            android:textSize="14dp"
            android:layout_toEndOf="@id/track_Card_image"
            android:layout_marginTop="10dp"
            android:id="@+id/track_card_from_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_card_start"></TextView>
        <TextView
            android:layout_marginStart="-5dp"
            android:textSize="14dp"
            android:layout_below="@id/track_card_from_tv"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/track_Card_image"
            android:id="@+id/track_card_to_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_card_end"></TextView>
        <ImageView
            android:layout_below="@id/track_card_name_tv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/track_Card_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/from_to_image"></ImageView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="-5dp"
            android:layout_below="@id/track_card_name_tv"
            android:layout_alignParentEnd="true"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:background="@color/purple_700"
            android:backgroundTint="@color/purple_700"
            app:cardCornerRadius="10dp">
            <TextView
                android:id="@+id/track_card_price_tv"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18dp"
                android:text="@string/track_card_price"></TextView>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/track_Card_image"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/distance"></ImageView>
            <TextView
                android:id="@+id/track_card_distance_tv"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/track_card_dis"></TextView>

            <ImageView
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/time"></ImageView>
            <TextView
                android:id="@+id/track_card_time_tv"
                android:layout_weight="1"
                android:textSize="12dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_card_time"></TextView>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>