<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp">
    <RelativeLayout
        android:id="@+id/main_head"
        android:background="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_text_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:text="@string/main_title1"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/sub_text_head"
            android:layout_below="@id/main_text_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/main_title2"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"></TextView>

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="90dp"
            android:layout_toStartOf="@id/sub_text_head"

            android:src="@drawable/bus"></ImageView>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
       <LinearLayout
           android:id="@+id/layout"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <EditText
               android:onClick="search"
               android:editable="false"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="5dp"
               android:layout_marginEnd="5dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/where_to"
               android:padding="10dp"
               android:background="#CCCCCC"
               android:drawableLeft="@drawable/ic_search"
               ></EditText>
           <androidx.appcompat.widget.AppCompatButton
               android:onClick="seeAllTracks"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginStart="5dp"
               android:layout_marginLeft="5dp"
               android:text="@string/seeAllTracks"
               android:textAllCaps="false"
               android:gravity="start|center"
               android:padding="10dp"
               android:drawableLeft="@drawable/ic_list"></androidx.appcompat.widget.AppCompatButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/aroundYou"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18dp"></TextView>
    <fragment
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/location_fr_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>
       </LinearLayout>
</LinearLayout>
