<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MainTrackDetails">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:background="@color/white"
        android:id="@+id/track_details_main_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@color/white"></ImageView>
    <TextView
        android:id="@+id/track_details_main_track_name"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_card_title"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:textSize="20dp"></TextView>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:text="@string/start_point"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/track_details_main_startPoint"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="start Point"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:text="@string/end_point"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/track_details_main_endPoint"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="End Point"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:text="@string/trip_point"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/track_details_main_Price"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="0.5 JD"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:text="@string/average_travel_time"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/track_details_main_time"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="45min"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:text="@string/track_distance"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/track_details_main_distance"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="12.5 km"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
          <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/purple_200"
                android:text="@string/active_buses"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:gravity="end"
                android:layout_marginEnd="30dp"
                android:id="@+id/track_details_main_activeBuses"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="25 Bus"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/purple_200"
            android:text="@string/main_city"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/track_details_main_mainCity"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="Amman"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>

   <Button
       android:onClick="goToMap"
       android:layout_margin="20dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAllCaps="false"
       android:text="@string/see_buses_on_the_map"
       android:layout_gravity="center"></Button>
</LinearLayout>
</ScrollView>