<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.BusDetailsActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@color/white"
            android:id="@+id/bus_details_main_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/bus_image_toyta"></ImageView>
        <TextView
            android:id="@+id/bus_details_bus_type"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="bus_type"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:textSize="20dp"></TextView>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"></View>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/purple_200"
                android:text="@string/bus_track_name"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:gravity="start"
                android:layout_marginEnd="30dp"
                android:id="@+id/bus_details_main_busType"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="start Point"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"></View>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="start"
                android:layout_weight="1"
                android:textColor="@color/purple_200"
                android:text="@string/bus_bus_id"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:gravity="end"
                android:layout_marginEnd="30dp"
                android:id="@+id/bus_details_main_id"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="15-223534"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"></View>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="start"
                android:layout_weight="1"
                android:textColor="@color/purple_200"
                android:text="@string/bus_bus_year"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:gravity="end"
                android:layout_marginEnd="30dp"
                android:id="@+id/bus_details_year"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="2010"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"></View>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="start"
                android:layout_weight="1"
                android:textColor="@color/purple_200"
                android:text="@string/bus_max_number"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:gravity="end"
                android:layout_marginEnd="30dp"
                android:id="@+id/bus_details_passengers"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="32 passenger"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"></View>

        <Button
            android:onClick="goToTrackDetails"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/bus_button"
            android:layout_gravity="center"></Button>
    </LinearLayout>
</ScrollView>